--- a/frontend/5xx.html
+++ b/frontend/5xx.html
@@ -77,6 +77,7 @@
         </style>
     </head>
     <body>
+        <noscript>This page relies on javascript. Please enable javascript on your browser</noscript>
         <div class="navBar">
             <div class="navBarInnerLeft websitename" style="cursor: pointer;">
                 <img alt="ComputerElite icon. Wooden background featuring a windows logo, oculus logo and a piano" src="https://computerelite.github.io/assets/CE_512px.png" style="height: 100%;">
