--- a/frontend/activity.html
+++ b/frontend/activity.html
@@ -8,6 +8,7 @@
         <meta name="description" content="Information about some activity">
     </head>
     <body>
+        <noscript>This page relies on javascript. Please enable javascript on your browser</noscript>
         <div class="content">
             <div>
                 <h2>Selected Activity</h2>
