--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -13,6 +13,7 @@
         <meta name="description" content="Why can you see this">
     </head>
     <body>
+        <noscript>This page relies on javascript. Please enable javascript on your browser</noscript>
         <div class="content">
             <h2>Admin panel</h2>
             <div style="display: flex; justify-content: center; flex-direction: column; align-items: center;">
