--- a/frontend/api.html
+++ b/frontend/api.html
@@ -33,6 +33,7 @@
         </style>
     </head>
     <body>
+        <noscript>This page relies on javascript. Please enable javascript on your browser</noscript>
         <div class="content">
             <h2>Api documentation</h2>
             <h3>Enums</h3>
