--- a/frontend/blocked.html
+++ b/frontend/blocked.html
@@ -9,6 +9,7 @@
         <meta name="google-site-verification" content="0UWk3BxSZQEsUvTS6W6NuN71Zcv9XDiBPUXGO_0llJM" />
     </head>
     <body>
+        <noscript>This page relies on javascript. Please enable javascript on your browser</noscript>
         <div class="content">
             <div>
                 <h2>Important info</h2>
