--- a/frontend/console.html
+++ b/frontend/console.html
@@ -10,6 +10,7 @@
         
     </head>
     <body>
+        <noscript>This page relies on javascript. Please enable javascript on your browser</noscript>
         <div class="content">
             <a href="/admin" style="position: absolute; top: 5px; left: 20px;">Back to admin panel</a>
             <div style="display: flex; justify-content: center; flex-direction: column; align-items: center;">
