--- a/frontend/guide.html
+++ b/frontend/guide.html
@@ -8,6 +8,7 @@
         <meta name="description" content="A guide to downgrade your games">
     </head>
     <body>
+        <noscript>This page relies on javascript. Please enable javascript on your browser</noscript>
         <div class="content">
             <h2>Downgrading guide</h2>
             <b class="big">Which headset do you use?</b>
