--- a/frontend/guidequest.html
+++ b/frontend/guidequest.html
@@ -5,9 +5,10 @@
         <link rel="stylesheet" href="/style.css" >
         <title>Downgrade guide Quest - OculusDB</title>
         <meta name="title" content="Downgrade guide Quest - OculusDB">
-        <meta name="description" content="A guide to downgrade your quest games with a pc">
+        <meta name="description" content="A guide to downgrade your quest games">
     </head>
     <body>
+        <noscript>This page relies on javascript. Please enable javascript on your browser</noscript>
         <div class="content">
             <h2>Downgrading games</h2>
             
