--- a/frontend/id.html
+++ b/frontend/id.html
@@ -8,6 +8,7 @@
         <meta name="description" content="Shows information about an version, app or dlc">
     </head>
     <body>
+        <noscript>This page relies on javascript. Please enable javascript on your browser</noscript>
         <div class="content">
             
             <div>
