--- a/frontend/login.html
+++ b/frontend/login.html
@@ -8,6 +8,7 @@
         <meta name="description" content="Login to your OculusDB account">
     </head>
     <body>
+        <noscript>This page relies on javascript. Please enable javascript on your browser</noscript>
         <div class="content">
             <h2>Only administrators can sign in</h2>
             <label >
