--- a/frontend/privacy.html
+++ b/frontend/privacy.html
@@ -8,6 +8,7 @@
         <meta name="description" content="Tells you what data is being collected by OculusDB">
     </head>
     <body>
+        <noscript>This page relies on javascript. Please enable javascript on your browser</noscript>
         <div class="content">
             <h1>Privacy policy</h1>
                 <h2>General</h2>
