--- a/frontend/server.html
+++ b/frontend/server.html
@@ -8,6 +8,7 @@
         <meta name="description" content="Various information about OculusDB and its server">
     </head>
     <body>
+        <noscript>This page relies on javascript. Please enable javascript on your browser</noscript>
         <div class="content">
             <h2>General info</h1>
             All data is being gathered from Oculus GraphQL api at <a href="https://graphql.oculus.com/graphql">https://graphql.oculus.com/graphql</a>.
