--- a/frontend/downloadstats.html
+++ b/frontend/downloadstats.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Shows you which applications have been downloaded the most">
 </head>
 <body>
+    <noscript>This page relies on javascript. Please enable javascript on your browser</noscript>
     <div class="content">
         <h2>Download stats</h2>
         Download stats <b>only</b> include downloads made with OculusDB.
