--- a/frontend/guidequest_PC.html
+++ b/frontend/guidequest_PC.html
@@ -8,6 +8,7 @@
         <meta name="description" content="A guide to downgrade your quest games with a pc">
     </head>
     <body>
+        <noscript>This page relies on javascript. Please enable javascript on your browser</noscript>
         <div class="content">
             <h2>Downgrading games</h2>
             
