--- a/frontend/recentactivity.html
+++ b/frontend/recentactivity.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Recent activity such as price changes, new applications, new versions and new dlcs of Oculus">
 </head>
 <body>
+    <noscript>This page relies on javascript. Please enable javascript on your browser</noscript>
     <div class="content">
         <h2>Recent Activity</h2>
         <h3>Want to get these updates on your Discord server?</h3>
