--- a/frontend/search.html
+++ b/frontend/search.html
@@ -8,6 +8,7 @@
         <meta name="description" content="Search OculusDB">
     </head>
     <body>
+        <noscript>This page relies on javascript. Please enable javascript on your browser</noscript>
         <div class="content">
             <h1>Results</h1>
             <label class="checkmarkContainer">
