--- a/frontend/supportus.html
+++ b/frontend/supportus.html
@@ -8,6 +8,7 @@
         <meta name="description" content="Find out how to help with development of OculusDB and many more tools">
     </head>
     <body>
+        <noscript>This page relies on javascript. Please enable javascript on your browser</noscript>
         <div class="content">
             <div>
                 <h2>Support us</h2>
