--- a/frontend/applicationspecific/2448060205267927.html
+++ b/frontend/applicationspecific/2448060205267927.html
@@ -4,7 +4,7 @@
 <div id="latestVer"></div>
 <input type="button" value="See available mods" onmousedown="MouseDown(event)" onmouseup="if(MouseUp(event)) OpenLocation('https://computerelite.github.io/tools/Beat_Saber/questmods.html')">
 <script>
-    fetch("https://raw.githubusercontent.com/BMBF/resources/master/com.beatgames.beatsaber/core-mods.json").then(res => {
+    fetch("/api/coremodsproxy").then(res => {
         res.json().then(json => {
             arr = []
             for (const [key, value] of Object.entries(json)) {
