probably fix application specific stuff. Cant be bothered to start up OculusDB on my pc to test that

--- a/frontend/id.html
+++ b/frontend/id.html
@@ -157,7 +157,7 @@
                     }
                 }
                 
-                if(first && object.__OculusDBType == "Application") {
+                if(object.__OculusDBType == "Application") {
                     AddApplicationSpecific(object.id)
                 } else {
                     document.getElementById("specificContainer").style.display = "none"
