forward query params on guides

--- a/frontend/guidequest_SQQ.html
+++ b/frontend/guidequest_SQQ.html
@@ -15,8 +15,8 @@
             <h3>Does your SideQuest look like this?</h3>
             <img alt="Screenshot of the SideQuest Easy Installer" src="/assets/sq.png">
             <br>
-            <input class="big" type="button" onclick="location = `/guide/quest/qavs`" value="yes">
-            <input class="big" type="button" onclick="location = `/guide/quest/pc`" value="no">
+            <input class="big" type="button" onclick="location = `/guide/quest/qavs?${params.toString()}`" value="yes">
+            <input class="big" type="button" onclick="location = `/guide/quest/pc?${params.toString()}`" value="no">
         </div>
         <script src="/script.js"></script>
     </body>
