Add params to guidequest.html

--- a/frontend/guidequest.html
+++ b/frontend/guidequest.html
@@ -13,8 +13,8 @@
             <h2>Downgrading games</h2>
             
             <h3>Do you have a PC with Sidequest (press no if you want to mod on android)?</h3>
-            <input class="big" type="button" onclick="location = `/guide/quest/sqq`" value="yes">
-            <input class="big" type="button" onclick="location = `/guide/quest/qavs`" value="no">
+            <input class="big" type="button" onclick="location = `/guide/quest/sqq?${params.toString()}`" value="yes">
+            <input class="big" type="button" onclick="location = `/guide/quest/qavs?${params.toString()}`" value="no">
         </div>
         <script src="/script.js"></script>
     </body>
