update 5xx page

--- a/frontend/5xx.html
+++ b/frontend/5xx.html
@@ -9,13 +9,15 @@
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700,700italic" rel="stylesheet" type="text/css">
         <style>
             html {
-                /* background-color: var(--bgColor); */
+                background-color: var(--bgColor);
+                /*
                 background-image: url('https://upload.wikimedia.org/wikipedia/commons/f/fd/LGBTQ%2B_rainbow_flag_Quasar_%22Progress%22_variant.svg');
                 background-attachment: fixed;
                 background-blend-mode: darken;
                 background-repeat: no-repeat;
                 background-size: cover;
                 background-color: #111111DD;
+                */
                 font-family: 'Open Sans';
                 font-size: 1rem;
             }
@@ -93,7 +95,7 @@
                 OculusDB is unavailable right now. We'll try to get it operational as fast as possible. This usually takes less than half an hour. We're sorry for the inconvenience.
                 <h2>What can I do?</h2>
                 Join the <a href="https://discord.gg/zwRfHQN2UY">OculusDB Discord server</a> and report the problem in the <code>#report-bugs</code> channel there.
-                <h2 onclick="GoBack()">Click here to try and go back to OculusDB</h2>
+                <h1 onclick="GoBack()" style="text-decoration: underline; color: var(--highlightedColor);">Click here to try and go back to OculusDB</h1>
             </div>
         </div>
         <script>
