Add application specific to downgrading guide pc

--- a/frontend/applicationspecific/2448060205267927.html
+++ b/frontend/applicationspecific/2448060205267927.html
@@ -10,9 +10,9 @@
             latest = arr.map( a => a.replace(/\d+/g, n => +n+100000 ) ).sort().map( a => a.replace(/\d+/g, n => +n-100000 ) ).reverse()[0]
             console.log(latest)
             if(params.get("downloadlatestmoddable"))
-                DownloadVersionPopUp(latest)
+                DownloadVersionPopUp(latest, '2448060205267927')
             var id = GetVersion(latest).id
-            document.getElementById("latestVer").innerHTML = `<input type="button" onclick="DownloadVersionPopUp('${latest}')" style="font-size: 1.2em;" value="Download latest moddable version (${latest})" oncontextmenu="ContextMenuEnabled(event)" cmon-0="Copy download url" cmov-0="Copy(GetDownloadLink('${id}'))" cmon-1="Show Oculus Downgrader code" cmov-1="AndroidDownloadPopUp('2448060205267927','${id}', 'HOLLYWOOD')">`
+            document.getElementById("latestVer").innerHTML = `<input type="button" onclick="DownloadVersionPopUp('${latest}', '2448060205267927')" style="font-size: 1.2em;" value="Download latest moddable version (${latest})" oncontextmenu="ContextMenuEnabled(event)" cmon-0="Copy download url" cmov-0="Copy(GetDownloadLink('${id}'))" cmon-1="Show Oculus Downgrader code" cmov-1="AndroidDownloadPopUp('2448060205267927','${id}', 'HOLLYWOOD')">`
         })
     })
 </script>
