Add Seacliff (Quest Pro), remove ram limiter, reenable caching, update core mods proxy to retain information if gitlab is down

--- a/frontend/search.html
+++ b/frontend/search.html
@@ -22,7 +22,7 @@
                 <span class="checkmark"></span>
             </label>
             <label class="checkmarkContainer">
-                Quest 1/Quest 2
+                Quest 1/2/Pro
                 <input id="monterey" type='checkbox' onclick='Update()'>
                 <span class="checkmark"></span>
             </label>
@@ -62,7 +62,8 @@
                 ],
                 "monterey": [
                     "MONTEREY",
-                    "HOLLYWOOD"
+                    "HOLLYWOOD",
+                    "SEACLIFF"
                 ],
                 "gearvr": [
                     "GEARVR"
