--- a/frontend/guidequest_PC.html
+++ b/frontend/guidequest_PC.html
@@ -16,7 +16,7 @@
             <div class="navBarElement">
                 <input type="text" placeholder="Game name" id="game">
                 <select id="headset">
-                    <option value="HOLLYWOOD,MONTEREY">Quest</option>
+                    <option value="HOLLYWOOD,MONTEREY,SEACLIFF">Quest</option>
                     <option value="RIFT,LAGUNA">Rift/Oculus Link</option>
                     <option value="GEARVR">GearVR</option>
                     <option value="PACIFIC">Go</option>
