Update changelogs to fetch from GitHub

--- a/frontend/server.html
+++ b/frontend/server.html
@@ -21,9 +21,9 @@
                 <div class="loader"></div>
             </div>
             
-            <h2>Recent Server Updates</h1>
+            <h2>Recent Server repo Updates</h1>
             <div id="updates">
-
+                <div class="loader"></div>
             </div>
         </div>
         <script src="/script.js"></script>
