fix pc downgrading guide headset default selection

--- a/frontend/guidequest_PC.html
+++ b/frontend/guidequest_PC.html
@@ -56,7 +56,7 @@
         <script>
             document.getElementById("game").value = params.get("game") ?? ""
             document.getElementById("version").value = params.get("version") ?? ""
-            document.getElementById("headset").value = params.get("headset") ?? "HOLLYWOOD,MONTEREY"
+            document.getElementById("headset").value = params.get("headset") ?? "HOLLYWOOD,MONTEREY,SEACLIFF"
             if( params.get("game") && params.get("version")) {
                 SearchVersion()
             }
