--- a/frontend/applicationspecific/2448060205267927.html
+++ b/frontend/applicationspecific/2448060205267927.html
@@ -11,7 +11,7 @@
             console.log(latest)
             if(params.get("downloadlatestmoddable"))
                 DownloadVersionPopUp(latest, '2448060205267927')
-            var id = GetVersion(latest).id
+            var id = GetVersion(latest, '2448060205267927', false).id
             document.getElementById("latestVer").innerHTML = `<input type="button" onclick="DownloadVersionPopUp('${latest}', '2448060205267927')" style="font-size: 1.2em;" value="Download latest moddable version (${latest})" oncontextmenu="ContextMenuEnabled(event)" cmon-0="Copy download url" cmov-0="Copy(GetDownloadLink('${id}'))" cmon-1="Show Oculus Downgrader code" cmov-1="AndroidDownloadPopUp('2448060205267927','${id}', 'HOLLYWOOD')">`
         })
     })
