update QAVS guide

--- a/frontend/guidequest_QAVS.html
+++ b/frontend/guidequest_QAVS.html
@@ -20,8 +20,15 @@
 
             <h3>3. Set up QuestAppVersionSwitcher</h3>
             In order to downgrade games you have to log in to your Facebook account on QuestAppVersionSwitcher.
-            To do that open the <code>Tools & Options</code> tab in QuestAppVersionSwitcher and press the Login button.
-            Log in to your Facebook account like you would normally.
+            To do that open QuestAppVersionSwitcher (from the unknown sources menu in your Quest) and allow the storage permission.
+            
+            <br>
+            Open the <code>Tools & Options</code> tab in QuestAppVersionSwitcher and press the Login button.
+            Log in to your Facebook account like you would normally.<br>
+            <br>
+            <b>QuestAppVersionSwitcher is white when you open it?</b>
+            <br>
+            Try clicking on the white and allow storage permission if a prompt appears. If it doesn't work restart your Quest and try again.
             <br>
             <br>
             <b>Stuck in a login loop?</b>
