--- a/frontend/qavsloganalyser.html
+++ b/frontend/qavsloganalyser.html
@@ -17,7 +17,7 @@
 
             <h2>Various</h2>
             <div>Login status: <b id="login">not logged in</b></div>
-            <div><b id="space">0 Bytes</b> of space available on their device (may not work on Quest)</div>
+            <div><b id="space">0 Bytes</b> of space available on their device</div>
             <div>Reported: <b id="time">Today</b></div>
             <div>QAVS version: <b id="version">1.8.0.0</b></div>
 
