Stop priority thread from scraping if scraping is paused

--- a/frontend/server.html
+++ b/frontend/server.html
@@ -73,6 +73,7 @@
                     <tr><td class="label">Activity entries</td><td class="value">${res.activityDocuments}</td></tr>
                     <tr><td class="label">Apps recognized by OculusDB</td><td class="value">${res.appsToScrape}</td></tr>
                     <tr><td class="label">Current database update scraped apps (may not be accurate)</td><td class="value">${res.scrapedApps}</td></tr>
+                    <tr><td class="label">Scraping Status</td><td class="value">${res.scrapingStatusString}</td></tr>
                 </table>`
             }))
 
