Add OculusDB Discord link

--- a/frontend/guidequest_QAVS.html
+++ b/frontend/guidequest_QAVS.html
@@ -15,6 +15,7 @@
             <h3>Video Tutorial by DiscoVR</h3>
             <iframe style="width: clamp(0px, 89vh, 100vw); height: 50vh;" src="https://www.youtube.com/embed/oFvxSkf6LDE" title="How to MOD Beat Saber on Quest 2! No PC Tutorial 2023" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <br>
+            <b>If you need help, join the <a href="{OculusDBDC}">OculusDB Discord Server</a> and ask your question in <code>#support</code></b>
             <h3>1. Install Sidequest</h3>
             Follow <a href="https://sidequestvr.com/setup-howto">this guide</a> install SideQuest to your vr headset or get SideQuest from the PlayStore if you are on an android phone.
 
