add scraping, remove data migration

--- a/frontend/blocked.html
+++ b/frontend/blocked.html
@@ -13,14 +13,11 @@
         <div class="content">
             <div>
                 <h2>Important info</h2>
-                OculusDB is currently experiencing issues:
-                <br>
-                <br>
-                Due to a bug in Oculus authentication I'm making OculusDB unavailable for now to prevent piracy. I apologise for any inconvenience caused by this.
+                OculusDB is currently performing a database migration. This is to speed up OculusDB. During this time OculusDB will be unavailable.
                 <br>
                 <br>
                 <h2>When will OculusDB be up again?</h2>
-                I reported the bug to oculus and told them that I'll open OculusDB either when they fix the issue or on July 7th 3pm GMT.
+                OculusDB will be up again when the migration is done. This should take less than 1 hour.
             </div>
         </div>
         <script>
