Update deploy script, Change video tutorial to VR Generation

--- a/frontend/guidequest_QAVS.html
+++ b/frontend/guidequest_QAVS.html
@@ -12,8 +12,8 @@
         <div class="content">
             <h2>Downgrading games</h2>
             
-            <h3>Video Tutorial by DiscoVR</h3>
-            <iframe style="width: clamp(0px, 89vh, 100vw); height: 50vh;" src="https://www.youtube.com/embed/oFvxSkf6LDE" title="How to MOD Beat Saber on Quest 2! No PC Tutorial 2023" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <h3>Video Tutorial by VR Generation</h3>
+            <iframe style="width: clamp(0px, 89vh, 100vw); height: 50vh;" src="https://www.youtube.com/embed/XE2o24_yack" title="Downgrade Beat Saber No PC for Meta Quest/Quest 2/Pro" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <br>
             <b>If you need help, join the <a href="{OculusDBDC}">OculusDB Discord Server</a> and ask your question in <code>#support</code></b>
             <h3>1. Install Sidequest</h3>
